// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataStorageService loadDataStorage call submits post request with correct body 1`] = `
Array [
  Array [
    "http://localhost:8000/api",
    Object {
      "query": "{ dataStorage { capacityTotal capacityUsed linkToStorage name storageType } }",
    },
  ],
]
`;

exports[`dataStorageService loadDataStore call submits post request with correct body 1`] = `
Array [
  Array [
    "http://localhost:8000/api",
    Object {
      "query": "{ dataStore(id: 123) { capacityTotal capacityUsed linkToStorage name storageType } }",
    },
  ],
]
`;
